@@ -1,5 +1,9 @@
 2007-05-03  Shawn Betts  <sabetts@vcn.bc.ca>
 
+	* make-image.lisp: return error code 0 for sbcl
+
+	* Makefile: new file
+
 	* user.lisp ("reload"): don't call asdf if it's not loaded.
 
 	* primitives.lisp (*new-frame-action*): new global
